--- a/phozogy-master/indexx.html
+++ b/phozogy-master/indexx.html
@@ -166,7 +166,7 @@
           </div>
           <div class="col-lg-6 col-md-6">
             <div class="right-btn">
-              <a href="#" class="primary-btn">VIew all</a>
+              <a href="Artworks.html" class="primary-btn">VIew all</a>
             </div>
           </div>
         </div>
@@ -174,50 +174,47 @@
           <div class="cs-item">
             <div
               class="cs-pic set-bg"
-              data-setbg="img/categories/cat-1.jpg"
+              data-setbg="img/artworks/paintings2.jpg"
             ></div>
             <div class="cs-text">
-              <h4>Animal</h4>
+              <h4>Paintings</h4>
               <span>120 pictures</span>
             </div>
           </div>
           <div class="cs-item">
-            <div
-              class="cs-pic set-bg"
-              data-setbg="img/categories/cat-2.jp"
-            ></div>
+            <div class="cs-pic set-bg" data-setbg="img/event2.jpg"></div>
             <div class="cs-text">
-              <h4>Natural</h4>
+              <h4>Panorama</h4>
               <span>325 pictures</span>
             </div>
           </div>
           <div class="cs-item">
             <div
               class="cs-pic set-bg"
-              data-setbg="img/categories/cat-3.jpg"
+              data-setbg="img/artworks/skulptura1.jpg"
             ></div>
             <div class="cs-text">
-              <h4>Potrait</h4>
+              <h4>History</h4>
               <span>540 pictures</span>
             </div>
           </div>
           <div class="cs-item">
             <div
               class="cs-pic set-bg"
-              data-setbg="img/categories/cat-4.jpg"
+              data-setbg="img/artworks/skulptura.jpg"
             ></div>
             <div class="cs-text">
-              <h4>Animal</h4>
+              <h4>Sculptures</h4>
               <span>120 pictures</span>
             </div>
           </div>
           <div class="cs-item">
             <div
               class="cs-pic set-bg"
-              data-setbg="img/categories/cat-5.jpg"
+              data-setbg="img/artworks/paintings3.jpg"
             ></div>
             <div class="cs-text">
-              <h4>Animal</h4>
+              <h4>Canvas</h4>
               <span>120 pictures</span>
             </div>
           </div>
