--- a/phozogy-master/contact.html
+++ b/phozogy-master/contact.html
@@ -36,23 +36,20 @@
                 <div class="col-lg-12">
                     <div class="logo">
                         <a href="./indexx.html">
-                            <img src="img/logo.png" alt="">
+                            <img src="img/Neutral_And_Black_Minimalist_Aesthetic_Art_Gallery_Logo__1_-removebg-preview.png"
                         </a>
                     </div>
                     <nav class="nav-menu mobile-menu">
                         <ul>
                             <li><a href="./indexx.html">Home</a></li>
-                            <li><a href="./services.html">Services</a></li>
+                            <li><a href="./events.html">events</a></li>
                             <li><a href="./Artworks.html">Artworks</a></li>
-                            <li><a href="./contact.html">ContactUS</a></li>                                   
+                            <li class="active"><a href="./contact.html">Contact</a></li>                               
                                 </ul>
                             </li>
-                            <li class="active"><a href="./contact.html">Contact</a></li>
                         </ul>
                     </nav>
-                    <div class="top-search search-switch">
-                        <i class="fa fa-search"></i>
-                    </div>
+                    <
                     <div id="mobile-menu-wrap"></div>
                 </div>
             </div>
