--- a/phozogy-master/events.html
+++ b/phozogy-master/events.html
@@ -50,8 +50,8 @@
             <nav class="nav-menu mobile-menu">
               <ul>
                 <li><a href="./index.html">Home</a></li>
+                <li class="active"><a href="./events.html">Events</a></li>
                 <li><a href="./Artworks.html">Artworks</a></li>
-                <li class="active"><a href="./services.html">Events</a></li>
 
                 <li><a href="./contact.html">Contact</a></li>
               </ul>
@@ -257,8 +257,12 @@
                 eiusmod tempor incididunt ut labore et dolore magna aliqua.
               </p>
               <div class="fa-social">
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="https://www.facebook.com/"
+                  ><i class="fa fa-facebook"></i
+                ></a>
+                <a href="https://www.instagram.com/"
+                  ><i class="fa fa-twitter"></i
+                ></a>
                 <a href="#"><i class="fa fa-youtube-play"></i></a>
                 <a href="#"><i class="fa fa-instagram"></i></a>
               </div>
@@ -268,9 +272,7 @@
             <div class="fs-widget">
               <h5>Instagram</h5>
               <div class="fw-instagram">
-                <img src="img/instagram/insta-1.jpg" alt="" />
-                <img src="img/instagram/insta-2.jpg" alt="" />
-                <img src="img/instagram/insta-3.jpg" alt="" />
+                <img src="img/Artworks/instaicon.jpg" alt="Instagram" />
               </div>
             </div>
           </div>
@@ -278,38 +280,26 @@
             <div class="fs-widget">
               <h5>Quick links</h5>
               <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="indexx.html">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
               </ul>
               <ul>
                 <li><a href="#">Gallery</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Services</a></li>
+                <li><a href="Artworks.html">Artworks</a></li>
               </ul>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="fs-widget">
               <h5>Subscribe</h5>
-              <p>
-                Imolor amet consectetur adipiscing elit, sed do eiusmod tempor
-                incididunt.
-              </p>
+              <p>For more news Subscribe below</p>
               <div class="fw-subscribe">
                 <form action="#">
                   <input type="text" placeholder="Email" />
                   <button type="submit"><i class="fa fa-send"></i></button>
                 </form>
               </div>
-            </div>
-          </div>
-          <div class="col-lg-12">
-            <div class="copyright-text">
-              <p>
-                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                Copyright &copy; mariolaureta
-              </p>
             </div>
           </div>
         </div>
