--- a/phozogy-master/indexx.html
+++ b/phozogy-master/indexx.html
@@ -50,7 +50,7 @@
             <nav class="nav-menu mobile-menu">
               <ul>
                 <li class="active"><a href="./indexx.html">Home</a></li>
-                <li><a href="./services.html">Events</a></li>
+                <li><a href="./events.html">Events</a></li>
                 <li><a href="./Artworks.html">Artworks</a></li>
 
                 <li><a href="./contact.html">Contact</a></li>
@@ -222,172 +222,69 @@
       </div>
     </section>
     <!-- Categories Section End -->
-
-    <!-- Portfolio Section Begin  Pjesa ku merret Mario Me Ndryshimet -->
-    <section class="portfolio-section spad">
+    <!-- Categories Section Begin -->
+    <section class="categories-section">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12">
-            <div class="section-title">
-              <h2>Our latest works</h2>
+          <div class="col-lg-6 col-md-6">
+            <div class="section-title"></div>
+          </div>
+          <div class="col-lg-6 col-md-6">
+            <div class="right-btn"></div>
+          </div>
+        </div>
+        <div class="categories-slider owl-carousel">
+          <div class="cs-item">
+            <div
+              class="cs-pic set-bg"
+              data-setbg="img/artworks/paintings2.jpg"
+            ></div>
+            <div class="cs-text">
+              <h4>Paintings</h4>
+              <span>120 pictures</span>
             </div>
-            <div class="filter-controls">
-              <ul>
-                <li class="active" data-filter="*">All</li>
-                <li data-filter=".fashion">Portraits</li>
-                <li data-filter=".lifestyle">Classic</li>
-                <li data-filter=".natural">Natural</li>
-                <li data-filter=".wedding">Canva</li>
-                <li data-filter=".videos">Digital</li>
-              </ul>
+          </div>
+          <div class="cs-item">
+            <div class="cs-pic set-bg" data-setbg="img/event2.jpg"></div>
+            <div class="cs-text">
+              <h4>Panorama</h4>
+              <span>325 pictures</span>
+            </div>
+          </div>
+          <div class="cs-item">
+            <div
+              class="cs-pic set-bg"
+              data-setbg="img/artworks/skulptura1.jpg"
+            ></div>
+            <div class="cs-text">
+              <h4>History</h4>
+              <span>540 pictures</span>
+            </div>
+          </div>
+          <div class="cs-item">
+            <div
+              class="cs-pic set-bg"
+              data-setbg="img/artworks/skulptura.jpg"
+            ></div>
+            <div class="cs-text">
+              <h4>Sculptures</h4>
+              <span>120 pictures</span>
+            </div>
+          </div>
+          <div class="cs-item">
+            <div
+              class="cs-pic set-bg"
+              data-setbg="img/artworks/paintings3.jpg"
+            ></div>
+            <div class="cs-text">
+              <h4>Canvas</h4>
+              <span>120 pictures</span>
             </div>
           </div>
         </div>
-      </div>
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-lg-12 p-0">
-            <div class="portfolio-filter">
-              <div
-                class="pf-item set-bg fashion"
-                data-setbg="img/portfolio/pf-1.jpg"
-              >
-                <a href="img/portfolio/pf-1.jpg" class="pf-icon image-popup"
-                  ><span class="icon_plus"></span
-                ></a>
-                <div class="pf-text">
-                  <h4>Artworks</h4>
-                  <span>Bellart</span>
-                </div>
-              </div>
-              <div
-                class="pf-item large-width large-height set-bg lifestyle"
-                data-setbg="img/portfolio/pf-2.jpg"
-              >
-                <a href="img/portfolio/pf-2.jpg" class="pf-icon image-popup"
-                  ><span class="icon_plus"></span
-                ></a>
-                <div class="pf-text">
-                  <h4>Artworks</h4>
-                  <span>Bellart</span>
-                </div>
-              </div>
-              <div
-                class="pf-item large-width set-bg natural"
-                data-setbg="img/portfolio/pf-3.jpg"
-              >
-                <a href="img/portfolio/pf-3.jpg" class="pf-icon image-popup"
-                  ><span class="icon_plus"></span
-                ></a>
-                <div class="pf-text">
-                  <h4>Artworks</h4>
-                  <span>Bellart</span>
-                </div>
-              </div>
-              <div
-                class="pf-item large-height set-bg wedding"
-                data-setbg="img/portfolio/pf-4.jpg"
-              >
-                <a href="img/portfolio/pf-4.jpg" class="pf-icon image-popup"
-                  ><span class="icon_plus"></span
-                ></a>
-                <div class="pf-text">
-                  <h4>Artworks</h4>
-                  <span>Bellart</span>
-                </div>
-              </div>
-              <div
-                class="pf-item set-bg lifestyle"
-                data-setbg="img/portfolio/pf-7.jpg"
-              >
-                <a href="img/portfolio/pf-7.jpg" class="pf-icon image-popup"
-                  ><span class="icon_plus"></span
-                ></a>
-                <div class="pf-text">
-                  <h4>Artworks</h4>
-                  <span>Bellart</span>
-                </div>
-              </div>
-              <div
-                class="pf-item set-bg natural"
-                data-setbg="img/portfolio/pf-8.jpg"
-              >
-                <a href="img/portfolio/pf-8.jpg" class="pf-icon image-popup"
-                  ><span class="icon_plus"></span
-                ></a>
-                <div class="pf-text">
-                  <h4>Artworks</h4>
-                  <span>Bellart</span>
-                </div>
-              </div>
-              <div
-                class="pf-item set-bg videos"
-                data-setbg="img/portfolio/pf-5.jpg"
-              >
-                <a href="img/portfolio/pf-5.jpg" class="pf-icon image-popup"
-                  ><span class="icon_plus"></span
-                ></a>
-                <div class="pf-text">
-                  <h4>Artworks</h4>
-                  <span>Bellart</span>
-                </div>
-              </div>
-              <div
-                class="pf-item set-bg fashion"
-                data-setbg="img/portfolio/pf-6.jpg"
-              >
-                <a href="img/portfolio/pf-6.jpg" class="pf-icon image-popup"
-                  ><span class="icon_plus"></span
-                ></a>
-                <div class="pf-text">
-                  <h4>Artworks</h4>
-                  <span>Bellart</span>
-                </div>
-              </div>
-              <div
-                class="pf-item large-width set-bg videos"
-                data-setbg="img/portfolio/pf-10.jpg"
-              >
-                <a href="img/portfolio/pf-10.jpg" class="pf-icon image-popup"
-                  ><span class="icon_plus"></span
-                ></a>
-                <div class="pf-text">
-                  <h4>Artworks</h4>
-                  <span>Bellart</span>
-                </div>
-              </div>
-              <div
-                class="pf-item set-bg fashion"
-                data-setbg="img/portfolio/pf-11.jpg"
-              >
-                <a href="img/portfolio/pf-11.jpg" class="pf-icon image-popup"
-                  ><span class="icon_plus"></span
-                ></a>
-                <div class="pf-text">
-                  <h4>Artworks</h4>
-                  <span>Bellart</span>
-                </div>
-              </div>
-              <div
-                class="pf-item large-width large-height set-bg wedding"
-                data-setbg="img/portfolio/pf-9.jpg"
-              >
-                <a href="img/portfolio/pf-9.jpg" class="pf-icon image-popup"
-                  ><span class="icon_plus"></span
-                ></a>
-                <div class="pf-text">
-                  <h4>Artworks</h4>
-                  <span>Bellart</span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="load-more-btn">
-        <a href="#">Load More</a>
       </div>
     </section>
+    <!-- Categories Section End -->
     <!-- Portfolio Section End -->
 
     <!-- Footer Section Begin -->
@@ -409,8 +306,12 @@
                 eiusmod tempor incididunt ut labore et dolore magna aliqua.
               </p>
               <div class="fa-social">
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="https://www.facebook.com/"
+                  ><i class="fa fa-facebook"></i
+                ></a>
+                <a href="https://www.instagram.com/"
+                  ><i class="fa fa-twitter"></i
+                ></a>
                 <a href="#"><i class="fa fa-youtube-play"></i></a>
                 <a href="#"><i class="fa fa-instagram"></i></a>
               </div>
@@ -420,9 +321,7 @@
             <div class="fs-widget">
               <h5>Instagram</h5>
               <div class="fw-instagram">
-                <img src="img/instagram/insta-1.jpg" alt="" />
-                <img src="img/instagram/insta-2.jpg" alt="" />
-                <img src="img/instagram/insta-3.jpg" alt="" />
+                <img src="img/Artworks/instaicon.jpg" alt="Instagram" />
               </div>
             </div>
           </div>
@@ -430,24 +329,20 @@
             <div class="fs-widget">
               <h5>Quick links</h5>
               <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="indexx.html">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
               </ul>
               <ul>
                 <li><a href="#">Gallery</a></li>
-                <li><a href="#">Artworks</a></li>
-                <li><a href="#">ContactUS</a></li>
+                <li><a href="Artworks.html">Artworks</a></li>
               </ul>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="fs-widget">
               <h5>Subscribe</h5>
-              <p>
-                Imolor amet consectetur adipiscing elit, sed do eiusmod tempor
-                incididunt.
-              </p>
+              <p>For more news Subscribe below</p>
               <div class="fw-subscribe">
                 <form action="#">
                   <input type="text" placeholder="Email" />
@@ -456,15 +351,9 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-12">
-            <div class="copyright-text">
-              copyright &copy; 2024 All rights mariolaureta
-            </div>
-          </div>
         </div>
       </div>
     </footer>
-    <!-- Footer Section End -->
 
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
