--- a/phozogy-master/Artworks.html
+++ b/phozogy-master/Artworks.html
@@ -53,7 +53,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="bo-links">
-                    <a href="./indexx.html"><i class="fa fa-home"></i> Home</a>
+                    <a href="./index.html"><i class="fa fa-home"></i> Home</a>
                     <span>Artworks</span>
                 </div>
             </div>
@@ -259,7 +259,7 @@ Nga ktu fillojne fotot
                 <div class="fs-widget">
                     <h5>Quick links</h5>
                     <ul>
-                        <li><a href="indexx.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
