--- a/phozogy-master/about.html
+++ b/phozogy-master/about.html
@@ -40,7 +40,7 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="logo">
-              <a href="./indexx.html">
+              <a href="./index.html">
                 <img src="img/logo.png" alt="" />
               </a>
             </div>
