--- a/phozogy-master/contact.html
+++ b/phozogy-master/contact.html
@@ -35,13 +35,13 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="logo">
-                        <a href="./indexx.html">
-                            <img src="img/Neutral_And_Black_Minimalist_Aesthetic_Art_Gallery_Logo__1_-removebg-preview.png"
+                        <a href="./index.html">
+                            <img src="img/Neutral_And_Black_Minimalist_Aesthetic_Art_Gallery_Logo__1_-removebg-preview.png">
                         </a>
                     </div>
                     <nav class="nav-menu mobile-menu">
                         <ul>
-                            <li><a href="./indexx.html">Home</a></li>
+                            <li><a href="./index.html">Home</a></li>
                             <li><a href="./events.html">events</a></li>
                             <li><a href="./Artworks.html">Artworks</a></li>
                             <li class="active"><a href="./contact.html">Contact</a></li>                               
@@ -49,7 +49,7 @@
                             </li>
                         </ul>
                     </nav>
-                    <
+                
                     <div id="mobile-menu-wrap"></div>
                 </div>
             </div>
