--- a/phozogy-master/Artworks.html
+++ b/phozogy-master/Artworks.html
@@ -36,7 +36,7 @@
                     </div>
                     <nav class="nav-menu mobile-menu">
                         <ul>
-                            <li><a href="./indexx.html">Home</a></li>
+                            <li><a href="./index.html">Home</a></li>
                             <li><a href="./events.html">Events</a></li><!-- Events nfakt eshte services -->
                             <li class="active"><a href="./Artworks.html">Artworks</a></li>
                             <li><a href="./about.html">Contact</a></li> <!-- About in do ta vejm brenda Contactit -->
