--- a/phozogy-master/index.html
+++ b/phozogy-master/index.html
@@ -40,7 +40,7 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="logo">
-              <a href="./indexx.html">
+              <a href="./index.html">
                 <img
                   src="img/Neutral_And_Black_Minimalist_Aesthetic_Art_Gallery_Logo__1_-removebg-preview.png"
                   alt=""
@@ -49,7 +49,7 @@
             </div>
             <nav class="nav-menu mobile-menu">
               <ul>
-                <li class="active"><a href="./indexx.html">Home</a></li>
+                <li class="active"><a href="./index.html">Home</a></li>
                 <li><a href="./events.html">Events</a></li>
                 <li><a href="./Artworks.html">Artworks</a></li>
 
