--- a/phozogy-master/portfolio.html
+++ b/phozogy-master/portfolio.html
@@ -36,7 +36,7 @@
                     </div>
                     <nav class="nav-menu mobile-menu">
                         <ul>
-                            <li><a href="./indexx.html">Home</a></li>
+                            <li><a href="./index.html">Home</a></li>
                             <li><a href="./services.html">Events</a></li>
                             <li class="active"><a href="./portfolio.html">Artworks</a></li><!-- Kte do e bejm rename ARTWORKS-->
                             <li><a href="./about.html">Contact</a></li> <!-- About in do ta vejm brenda Contactit -->
