--- a/phozogy-master/Artworks.html
+++ b/phozogy-master/Artworks.html
@@ -39,7 +39,7 @@
                             <li><a href="./index.html">Home</a></li>
                             <li><a href="./events.html">Events</a></li><!-- Events nfakt eshte services -->
                             <li class="active"><a href="./Artworks.html">Artworks</a></li>
-                            <li><a href="./about.html">Contact</a></li> <!-- About in do ta vejm brenda Contactit -->
+                            <li><a href="./contact.html">Contact</a></li> <!-- About in do ta vejm brenda Contactit -->
                             </ul>           
                     </nav>
                     <div id="mobile-menu-wrap"></div>
