--- a/phozogy-master/index.html
+++ b/phozogy-master/index.html
@@ -52,8 +52,7 @@
                 <li class="active"><a href="./index.html">Home</a></li>
                 <li><a href="./events.html">Events</a></li>
                 <li><a href="./Artworks.html">Artworks</a></li>
-
-                <li><a href="./contact.html">Contact</a></li>
+                <li><a href="./contact.html">Contact BellArt</a></li>
               </ul>
             </nav>
 
