--- a/phozogy-master/Artworks.html
+++ b/phozogy-master/Artworks.html
@@ -12,6 +12,16 @@
     <!-- Google Font ggg-->
     <link href="https://fonts.googleapis.com/css?family=Quantico:400,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
+   
+    <!-- Flavicon -->
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/phozogy-master/img/flavicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/phozogy-master/img/flavicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/phozogy-master/img/flavicon/favicon-16x16.png">
+    <link rel="manifest" href="/phozogy-master/img/flavicon/site.webmanifest">
+   
+   
+   
     <!-- Css Styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
