--- a/phozogy-master/index.html
+++ b/phozogy-master/index.html
@@ -17,6 +17,14 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap"
       rel="stylesheet"
     />
+     <!-- Flavicon -->
+
+     <link rel="apple-touch-icon" sizes="180x180" href="/phozogy-master/img/flavicon/apple-touch-icon.png">
+     <link rel="icon" type="image/png" sizes="32x32" href="/phozogy-master/img/flavicon/favicon-32x32.png">
+     <link rel="icon" type="image/png" sizes="16x16" href="/phozogy-master/img/flavicon/favicon-16x16.png">
+     <link rel="manifest" href="/phozogy-master/img/flavicon/site.webmanifest">
+
+
 
     <!-- Css Styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
@@ -52,7 +60,7 @@
                 <li class="active"><a href="./index.html">Home</a></li>
                 <li><a href="./events.html">Events</a></li>
                 <li><a href="./Artworks.html">Artworks</a></li>
-                <li><a href="./contact.html">Contact BellArt</a></li>
+                <li><a href="./contact.html">Contact</a></li>
               </ul>
             </nav>
 
