--- a/phozogy-master/Artworks.html
+++ b/phozogy-master/Artworks.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Artworks, great, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>BellART-Artworks</title>
+    <title>Artworks</title>
 
     <!-- Google Font ggg-->
     <link href="https://fonts.googleapis.com/css?family=Quantico:400,700&display=swap" rel="stylesheet">
@@ -308,14 +308,5 @@ Nga ktu fillojne fotot
 <script src="js/jquery.slicknav.js"></script>
 <script src="js/owl.carousel.min.js"></script>
 <script src="js/main.js"></script>
-
-
-
-
 </body>
-
-
-
-
-
 </html>
