--- a/phozogy-master/contact.html
+++ b/phozogy-master/contact.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Contacts, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contacts BellArt</title>
+    <title>Contacts</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Quantico:400,700&display=swap" rel="stylesheet">
