--- a/phozogy-master/events.html
+++ b/phozogy-master/events.html
@@ -2,22 +2,20 @@
 <html lang="zxx">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Phozogy Template" />
-    <meta name="keywords" content="Phozogy, unica, creative, html" />
+    <meta name="description" content="Events" />
+    <meta name="keywords" content="Events, unica, creative, html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Phozogy | Template</title>
+    <title>Events</title>
 
     <!-- Google Font -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Quantico:400,700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap"
-      rel="stylesheet"
-    />
-
+    <link href="https://fonts.googleapis.com/css?family=Quantico:400,700&display=swap"rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap"rel="stylesheet"/>
+     <!-- Flavicon -->
+     <link rel="apple-touch-icon" sizes="180x180" href="/phozogy-master/img/flavicon/apple-touch-icon.png">
+     <link rel="icon" type="image/png" sizes="32x32" href="/phozogy-master/img/flavicon/favicon-32x32.png">
+     <link rel="icon" type="image/png" sizes="16x16" href="/phozogy-master/img/flavicon/favicon-16x16.png">
+     <link rel="manifest" href="/phozogy-master/img/flavicon/site.webmanifest">
     <!-- Css Styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" />
