--- a/phozogy-master/contact.html
+++ b/phozogy-master/contact.html
@@ -44,7 +44,7 @@
                     <nav class="nav-menu mobile-menu">
                         <ul>
                             <li><a href="./index.html">Home</a></li>
-                            <li><a href="./events.html">events</a></li>
+                            <li><a href="./events.html">Events</a></li>
                             <li><a href="./Artworks.html">Artworks</a></li>
                             <li class="active"><a href="./contact.html">Contact</a></li>                               
                                 </ul>
@@ -148,11 +148,6 @@
           alert("Your message was delivered !");
         }
     </script>
-
-
-    
-
-
 
 </body>
 
