--- a/phozogy-master/events.html
+++ b/phozogy-master/events.html
@@ -79,7 +79,9 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 col-sm-6">
             <div class="services-item">
-              <img src="img/event1.jpg" alt="" />
+              <a href="your_destination_url_1">
+                <img src="img/event1.jpg" alt="" />
+              </a>
               <h3>The Moody Blues</h3>
               <h5>16.05.2024</h5>
               <p>
@@ -91,7 +93,9 @@
           </div>
           <div class="col-lg-4 col-md-6 col-sm-6">
             <div class="services-item">
-              <img src="img/event2.jpg" alt="" />
+              <a href="your_destination_url_2">
+                <img src="img/event2.jpg" alt="" />
+              </a>
               <h3>The Moody Blues</h3>
               <h5>16.05.2024</h5>
               <p>
@@ -103,7 +107,24 @@
           </div>
           <div class="col-lg-4 col-md-6 col-sm-6">
             <div class="services-item">
-              <img src="img/events3.jpg" alt="" />
+              <a href="your_destination_url_3">
+                <img src="img/events3.jpg" alt="" />
+              </a>
+              <h3>The Moody Blues</h3>
+              <h5>16.05.2024</h5>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt magna aliqua. Quis ipsum suspendisse
+                ultrices gravida.
+              </p>
+            </div>
+          </div>
+          <!-- Repeat the same structure for other items -->
+          <div class="col-lg-4 col-md-6 col-sm-6">
+            <div class="services-item">
+              <a href="your_destination_url_4">
+                <img src="img/events5.jpg" alt="" />
+              </a>
               <h3>The Moody Blues</h3>
               <h5>16.05.2024</h5>
               <p>
@@ -115,7 +136,9 @@
           </div>
           <div class="col-lg-4 col-md-6 col-sm-6">
             <div class="services-item">
-              <img src="img/events5.jpg" alt="" />
+              <a href="your_destination_url_5">
+                <img src="img/events6.jpg" alt="" />
+              </a>
               <h3>The Moody Blues</h3>
               <h5>16.05.2024</h5>
               <p>
@@ -127,19 +150,9 @@
           </div>
           <div class="col-lg-4 col-md-6 col-sm-6">
             <div class="services-item">
-              <img src="img/events6.jpg" alt="" />
-              <h3>The Moody Blues</h3>
-              <h5>16.05.2024</h5>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt magna aliqua. Quis ipsum suspendisse
-                ultrices gravida.
-              </p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 col-sm-6">
-            <div class="services-item">
-              <img src="img/events7.jpg" alt="" />
+              <a href="your_destination_url_6">
+                <img src="img/events7.jpg" alt="" />
+              </a>
               <h3>The Moody Blues</h3>
               <h5>16.05.2024</h5>
               <p>
