--- a/phozogy-master/index.html
+++ b/phozogy-master/index.html
@@ -17,14 +17,26 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap"
       rel="stylesheet"
     />
-     <!-- Flavicon -->
+    <!-- Flavicon -->
 
-     <link rel="apple-touch-icon" sizes="180x180" href="/phozogy-master/img/flavicon/apple-touch-icon.png">
-     <link rel="icon" type="image/png" sizes="32x32" href="/phozogy-master/img/flavicon/favicon-32x32.png">
-     <link rel="icon" type="image/png" sizes="16x16" href="/phozogy-master/img/flavicon/favicon-16x16.png">
-     <link rel="manifest" href="/phozogy-master/img/flavicon/site.webmanifest">
-
-
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/phozogy-master/img/flavicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/phozogy-master/img/flavicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/phozogy-master/img/flavicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/phozogy-master/img/flavicon/site.webmanifest" />
 
     <!-- Css Styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
