--- a/phozogy-master/events.html
+++ b/phozogy-master/events.html
@@ -77,7 +77,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 col-sm-6">
             <div class="services-item">
-              <a href="your_destination_url_1">
+              <a href="moodyblues.html">
                 <img src="img/event1.jpg" alt="" />
               </a>
               <h3>The Moody Blues</h3>
