--- a/phozogy-master/moodyblues.html
+++ b/phozogy-master/moodyblues.html
@@ -43,7 +43,7 @@
         </p>
       </div>
 
-      <a href="#" class="c-gallery__link"> More </a>
+      <a href="events.html" class="c-gallery__link"> Back </a>
     </div>
   </header>
 
